# backend-gyg

./: pyproject.toml  requirements.txt
presupuestador_gyg_api/: __init__.py  __main__.py
presupuestador_gyg_api/api/: __init__.py  admin_user_crud.py  user_auth.py
presupuestador_gyg_api/auth/: __init__.py  cookies.py  sign.py  token.py
presupuestador_gyg_api/database/: __init__.py  custom_declarative_base.py  engine.py  session.py
presupuestador_gyg_api/models/: __init__.py  ordinal_form.py  user.py
presupuestador_gyg_api/schemas/: __init__.py  ordinal_form_counter.py  user.py
